{
    "name": "VR_Controls",
    "maps": [
        {
            "name": "VRGameplay",
            "id": "4d70ce59-c5dd-4f3a-a980-d32c3de1655f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "8e36c0e7-6c4f-4f21-8a9c-e7682b9a6539",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripLeft",
                    "type": "Value",
                    "id": "9c3f967e-6a89-4a43-8a54-f7947f49f50b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripRight",
                    "type": "Value",
                    "id": "2e4c68d5-774a-4b41-9c59-51f7b6929558",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TriggerLeft",
                    "type": "Value",
                    "id": "f1c20d8b-8a71-4e7e-8f62-91924ed7c52a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TriggerRight",
                    "type": "Value",
                    "id": "b033b465-9907-4d6f-9b26-72d302770d70",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2f148b91-9b6c-49c4-9b42-08533e14d829",
                    "path": "<XRController>{LeftHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d42f1b0-6f5d-4f63-8e19-e3c2e8a4f1d2",
                    "path": "<XRController>{LeftHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e523f55-3b9a-4d84-9c42-6f6097a0c6e5",
                    "path": "<XRController>{RightHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c2f3d8e-9b6c-4f63-8e19-e3c2e8a4f1d2",
                    "path": "<XRController>{LeftHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f523f55-3b9a-4d84-9c42-6f6097a0c6e5",
                    "path": "<XRController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ]
}